Update JAR artifact name and path in build workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,5 +28,5 @@ jobs:
     - name: Upload JAR artifact
       uses: actions/upload-artifact@v6
       with:
-        name: app-jar
-        path: target/*.jar
+        name: Mustang-CLI-SNAPSHOT.jar
+        path: mustang_builds/Mustang-CLI/target/Mustang-CLI-*-SNAPSHOT.jar
